--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ nav li{
 
 nav a{
     text-transform: uppercase;
-    color: #000000;
+    color: #ad8edf;
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;
